--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
@@ -32,6 +33,10 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "peerDependencies": {
+    "react": "^0.14 || ^15.0.0-rc || ^15.0.0 || ^16.0.0-rc || ^16.0.0 || ^17.0.0",
+    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0.0 || ^16.0.0-rc || ^16.0.0 || ^17.0.0"
   },
   "browserslist": {
     "production": [
